<resources>
    <string name="app_name">MangaApp</string>

    <string name="nav_home">Home</string>
    <string name="nav_info">Info</string>
    <string name="nav_favourite">Favourite Music</string>
    <string name="nav_setting">Settings</string>
    <string name="nav_account">Account</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>