<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/nav_home" />

        <item
            android:id="@+id/nav_favourite"
            android:icon="@drawable/ic_baseline_favorite_24"
            android:title="@string/nav_favourite" />

    </group>

    <item android:title="@string/nav_account">

        <menu>
            <item
                android:id="@+id/nav_info"
                android:icon="@drawable/ic_baseline_info_24"
                android:title="@string/nav_info" />

            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_baseline_settings_24"
                android:title="@string/nav_setting" />
        </menu>

    </item>


</menu>